Remove the PhoneGap initialised logo. Use the correct div styles for jQuery Mobile (as well as those for PhoneGap).

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -4,3 +4,11 @@
         font-size: 1px;
         line-height: 0px;
 }
+
+.jqueryOutput {
+	font-size: smaller;
+}
+
+.jqueryMobileOutput {
+	font-size: smaller;
+}
